force-app/main/default/objects/Property_Auction__c/Property_Auction__c.object-meta.xml
<CustomObject>
    <label>Property Auction</label>
    <nameField>
        <label>Property Auction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Property Auctions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>