force-app/main/default/objects/Property_Auction__c/fields/Days_on_Market__c.field-meta.xml
<CustomField>
    <fullName>Days_on_Market__c</fullName>
    <label>Days on Market</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>