force-app/main/default/objects/Property_Auction__c/fields/Listing__c.field-meta.xml
<CustomField>
    <fullName>Listing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Listing</label>
    <referenceTo>Listings__c</referenceTo>
    <relationshipLabel>Property Auctions</relationshipLabel>
    <relationshipName>Property_Auctions</relationshipName>
    <type>Lookup</type>
</CustomField>