force-app/main/default/objects/Property_Auction__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Unoccupied - For Title Consolidation</fullName>
            </value>
            <value>
                <fullName>Occupied - Occupant Undisclosed</fullName>
            </value>
            <value>
                <fullName>Unoccupied</fullName>
            </value>
            <value>
                <fullName>Occupied - For Title Consolidation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>