force-app/main/default/objects/Property_Auction__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Amount__c</columns>
    <columns>Date_Added__c</columns>
    <columns>Days_on_Market__c</columns>
    <columns>Listing__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>